# CookieEngine

./: CMakeLists.txt  CMakeSettings.json  Milestone2.md  Milestone3.md  ReadMe.html  ReadMe.md  imgui.ini
CookieEngine/: CMakeLists.txt  ReadMe.md
CookieEngine/include/: Editor.hpp  Engine.hpp  Game.hpp
CookieEngine/include/Core/: Debug.hpp  Input.hpp  Primitives.hpp  Primitives.inl  Sphere.inl  Time.hpp  Window.hpp
CookieEngine/include/Core/Math/: Calc.hpp  Mat4.hpp  Mat4.inl  Quat.hpp  Quat.inl  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl  Vec4.hpp
CookieEngine/include/ECS/: ComponentCollider.hpp  ComponentEditor.hpp  ComponentGameplay.hpp  ComponentGameplay.inl  ComponentHandler.hpp  ComponentHandler.inl  ComponentModel.hpp  ComponentPhysics.hpp  ComponentRigidBody.hpp  ComponentScript.hpp  ComponentTransform.hpp  ComponentTransform.inl  Coordinator.hpp  EntityHandler.hpp  SystemHandler.hpp  SystemHandler.inl
CookieEngine/include/Editor/: Scene.hpp  Serialization.hpp  Tiles.hpp
CookieEngine/include/Gameplay/: AIBehavior.hpp  AIStep.hpp  Army.hpp  ArmyCoordinator.hpp  ArmyHandler.hpp  Building.hpp  CGPAttack.hpp  CGPLive.hpp  CGPMove.hpp  CGPProducer.hpp  CGPResource.hpp  CGPWorker.hpp  Income.hpp  Living.hpp  PlayerData.hpp  Unit.hpp
CookieEngine/include/Physics/: PhysicsHandle.hpp  PhysicsSimulator.hpp
CookieEngine/include/Render/: Camera.hpp  Camera.inl  ComposePass.hpp  D3D11Helper.hpp  DebugRenderer.hpp  DirLightPass.hpp  DrawDataHandler.hpp  FBODrawer.hpp  FrameBuffer.hpp  GeometryPass.hpp  Light.hpp  LightPass.hpp  MapDrawer.hpp  ParticlesPass.hpp  Renderer.hpp  RendererRemote.hpp  RendererState.hpp  ShadowBuffer.hpp  Skybox.hpp
CookieEngine/include/Render/Drawers/: DirLightDrawer.hpp  MapDrawer.hpp  MiniMapDrawer.hpp  MiniModelDrawer.hpp  ModelDrawer.hpp  PlayerDrawer.hpp  PointLightDrawer.hpp  SelectionDrawer.hpp  Skybox.hpp
CookieEngine/include/Render/RenderPass/: ComposePass.hpp  DirLightPass.hpp  GameplayPass.hpp  GeometryPass.hpp  LightPass.hpp  MiniMapPass.hpp  PointLightPass.hpp  ShadowPass.hpp
CookieEngine/include/Resources/: Loader.hpp  Map.hpp  MapExplorerHelper.hpp  Mesh.hpp  Prefab.hpp  ResourcesManager.hpp  Scene.hpp  Script.hpp  Serialization.hpp  Shader.hpp  Sound.hpp  SoundManager.hpp  Texture.hpp  Tiles.hpp
CookieEngine/include/Resources/Particles/: ParticlesData.hpp  ParticlesEmitter.hpp  ParticlesGenerator.hpp  ParticlesHandler.hpp  ParticlesSystem.hpp  ParticlesUpdate.hpp
CookieEngine/include/Resources/Shader/: BlinnPhongShader.hpp  FBODrawShader.hpp  GeometryShader.hpp  ParticlesShader.hpp  PhysicsShader.hpp  SkyBoxShader.hpp  TextureShader.hpp
CookieEngine/include/UI/: .dummy  CustomImWidget.hpp  UIallIn.hpp  UIcore.h  UIcore.hpp  UIeditor.hpp  UIeditor_AllIn.hpp  UIgame.hpp  UIgame_AllIn.hpp  UImenu.hpp  UIscene.hpp  UIwidgetBases.h  UIwidgets.h
CookieEngine/include/UI/Widgets/: ConsoleWidget.hpp  FileExplorerWidget.hpp  GameportWidget.hpp  HierarchyWidget.hpp  InspectorWidget.hpp  TextureEditorWidget.hpp  ToolbarWidget.hpp  UIwidgetBases.h  UIwidgetBases.hpp  UIwidgets.h  UIwidgets.hpp  ViewportWidget.hpp
CookieEngine/include/UI/Widgets/EditorWs/: AIBehaviorEditorWidget.hpp  ConsoleWidget.hpp  FileExplorerWidget.hpp  GameUIeditorWidget.hpp  GameportWidget.hpp  HierarchyWidget.hpp  InspectorWidget.hpp  ParticleEditorWidget.hpp  SoundOrchestratorWidget.hpp  TextureEditorWidget.hpp  ToolbarWidget.hpp  ViewportWidget.hpp  WorldSettingsWidget.hpp
CookieEngine/include/UI/Widgets/GameWs/: ActionPanelWidget.hpp  GamespectorWidget.hpp  MinimapWidget.hpp  ResourcePanelWidgets.hpp  TestWidget.hpp
CookieEngine/src/: Editor.cpp  Engine.cpp  Game.cpp  main.cpp
CookieEngine/src/Core/: Debug.cpp  Window.cpp
CookieEngine/src/ECS/: ComponentEditor.cpp  ComponentHandler.cpp  ComponentModel.cpp  ComponentPhysics.cpp  ComponentScript.cpp  Coordinator.cpp  EntityHandler.cpp
CookieEngine/src/Editor/: Scene.cpp  Serialization.cpp  Tiles.cpp
CookieEngine/src/Gameplay/: ArmyCoordinator.cpp  ArmyHandler.cpp  CGPAttack.cpp  CGPLive.cpp  CGPMove.cpp  CGPProducer.cpp  CGPWorker.cpp
CookieEngine/src/Physics/: PhysicsSimulator.cpp
CookieEngine/src/Render/: ComposePass.cpp  DebugRenderer.cpp  DirLightPass.cpp  DrawDataHandler.cpp  FBODrawer.cpp  FrameBuffer.cpp  GeometryPass.cpp  Light.cpp  LightPass.cpp  MapDrawer.cpp  ParticlesPass.cpp  Renderer.cpp  RendererRemote.cpp  RendererState.cpp  ShadowBuffer.cpp  SkyBox.cpp
CookieEngine/src/Render/Drawers/: DirLightDrawer.cpp  FBODrawer.cpp  MapDrawer.cpp  MiniMapDrawer.cpp  MiniModelDrawer.cpp  ModelDrawer.cpp  PlayerDrawer.cpp  PointLightDrawer.cpp  SelectionDrawer.cpp  SkyBox.cpp
CookieEngine/src/Render/RenderPass/: ComposePass.cpp  DirLightPass.cpp  GameplayPass.cpp  GeometryPass.cpp  LightPass.cpp  MiniMapPass.cpp  ParticlesPass.cpp  PointLightPass.cpp  ShadowPass.cpp
CookieEngine/src/Resources/: CMakeLists.txt  Loader.cpp  Map.cpp  Mesh.cpp  ResourcesManager.cpp  Scene.cpp  Serialization.cpp  Shader.cpp  SoundManager.cpp  Texture.cpp  Tiles.cpp
CookieEngine/src/Resources/Particles/: ParticlesGenerator.cpp  ParticlesHandler.cpp  ParticlesSystem.cpp  ParticlesUpdate.cpp
CookieEngine/src/Resources/Shader/: BlinnPhongShader.cpp  FBODrawShader.cpp  GeometryShader.cpp  ParticlesShader.cpp  PhysicsShader.cpp  SkyBoxShader.cpp  TextureShader.cpp
CookieEngine/src/UI/: CustomImWidget.cpp  UIcore.cpp  UIeditor.cpp  UIgame.cpp  UImenu.cpp  UIscene.cpp  UIwidgetBases.cpp  UIwidgets.cpp
CookieEngine/src/UI/Widgets/: ConsoleWidget.cpp  FileExplorerWidget.cpp  GameportWidget.cpp  HierarchyWidget.cpp  InspectorWidget.cpp  TextureEditorWidget.cpp  ToolbarWidget.cpp  UIwidgetBases.cpp  UIwidgets.cpp  ViewportWidget.cpp
CookieEngine/src/UI/Widgets/EditorWs/: AIBehaviorEditorWidget.cpp  ConsoleWidget.cpp  FileExplorerWidget.cpp  GameUIeditorWidget.cpp  GameportWidget.cpp  HierarchyWidget.cpp  InspectorWidget.cpp  ParticleEditorWidget.cpp  SoundOrchestratorWidget.cpp  TextureEditorWidget.cpp  ToolbarWidget.cpp  ViewportWidget.cpp  WorldSettingsWidget.cpp
(+5 files in other folders)
